# serenity-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Cargo.toml  README.md  compile_shaders.bat  setup.bat
data/: editor.ini
data/Cube/: README.md
data/flying_world/: license.txt
game/: CMakeLists.txt  game.cpp  sandbox.cpp
game/cube-game/: CMakeLists.txt  game.cpp
game/cube-game/scripts/: init_default_level.lua  init_level_2.lua  obstacle_circular_movement.lua  obstacle_horizontal_movement.lua  obstacle_horizontal_movement_fast.lua  obstacle_horizontal_scale.lua  obstacle_rotator.lua
game/sandbox/: CMakeLists.txt  sandbox.cpp
game/sandbox/scripts/: init_pbr_scene.lua  test2.lua
game/scripts/: init_pbr_scene.lua  test.lua  test2.lua
include/serenity-engine/: pch.hpp  serenity-engine.hpp
include/serenity-engine/asset/: mesh_loader.hpp  model_loader.hpp  texture_loader.hpp
include/serenity-engine/core/: application.hpp  file_system.hpp  input.hpp  log.hpp  singleton_instance.hpp
include/serenity-engine/editor/: editor.hpp  imgui_sink.hpp
include/serenity-engine/graphics/: buffer.hpp  command_list.hpp  command_queue.hpp  d3d_utils.hpp  d3dx12.hpp  descriptor_heap.hpp  device.hpp  pipeline.hpp  root_signature.hpp  shader_compiler.hpp  swapchain.hpp  texture.hpp
include/serenity-engine/renderer/: renderer.hpp  shader.hpp  shader_compiler.hpp
include/serenity-engine/renderer/renderpass/: atmosphere_renderpass.hpp  cube_map_renderpass.hpp  post_processing_renderpass.hpp  shading_renderpass.hpp
include/serenity-engine/renderer/rhi/: buffer.hpp  command_list.hpp  d3d_utils.hpp  descriptor_heap.hpp  device.hpp  dxcapi.hpp  pipeline.hpp  rhi.hpp  swapchain.hpp  texture.hpp
include/serenity-engine/scene/: camera.hpp  game_object.hpp  lights.hpp  mesh.hpp  model.hpp  scene.hpp  scene_manager.hpp
include/serenity-engine/scripting/: script_manager.hpp
include/serenity-engine/utils/: enum_value.hpp  primitive_datatypes.hpp  string_conversions.hpp  timer.hpp
include/serenity-engine/window/: window.hpp
serenity-engine/include/serenity-engine/: serenity-engine.hpp
serenity-engine/include/serenity-engine/asset/: model_loader.hpp  texture_loader.hpp
serenity-engine/include/serenity-engine/core/: file_system.hpp  input.hpp  log.hpp  singleton_instance.hpp
serenity-engine/include/serenity-engine/editor/: editor.hpp  game_object_panel.hpp  imgui_sink.hpp
serenity-engine/include/serenity-engine/renderer/: renderer.hpp  shader_compiler.hpp
serenity-engine/include/serenity-engine/renderer/renderpass/: atmosphere_renderpass.hpp  post_processing_renderpass.hpp  shading_renderpass.hpp
serenity-engine/include/serenity-engine/renderer/rhi/: buffer.hpp  command_list.hpp  command_queue.hpp  command_signature.hpp  d3d_utils.hpp  descriptor_heap.hpp  device.hpp  rhi.hpp  root_signature.hpp  swapchain.hpp  texture.hpp
serenity-engine/include/serenity-engine/scene/: game_object.hpp  lights.hpp  scene.hpp  scene_manager.hpp
serenity-engine/include/serenity-engine/scripting/: script_manager.hpp
serenity-engine/include/serenity-engine/utils/: enum_value.hpp  primitive_datatypes.hpp  string_conversions.hpp
serenity-engine/include/serenity-engine/window/: window.hpp
serenity-engine/src/: CMakeLists.txt
serenity-engine/src/asset/: CMakeLists.txt  model_loader.cpp  texture_loader.cpp
serenity-engine/src/core/: application.cpp  file_system.cpp  log.cpp
serenity-engine/src/editor/: CMakeLists.txt  editor.cpp  game_object_panel.cpp
serenity-engine/src/main/: CMakeLists.txt
serenity-engine/src/renderer/: CMakeLists.txt  renderer.cpp
serenity-engine/src/renderer/renderpass/: CMakeLists.txt  cube_map_renderpass.cpp  post_processing_renderpass.cpp  shading_renderpass.cpp
serenity-engine/src/renderer/rhi/: CMakeLists.txt  command_list.cpp  command_queue.cpp  command_signature.cpp  descriptor_heap.cpp  root_signature.cpp
serenity-engine/src/scene/: CMakeLists.txt  game_object.cpp  lights.cpp  scene.cpp  scene_manager.cpp
serenity-engine/src/scripting/: CMakeLists.txt  script_manager.cpp
serenity-engine/src/utils/: CMakeLists.txt
serenity-engine/src/window/: CMakeLists.txt  window.cpp
shaders/: cube_map.hlsl  hello_triangle.hlsl  lights.hlsl  mesh_viewer.hlsl  post_process.hlsl  post_process_combine.hlsl  preetham_sky_model.hlsli  tone_mappers.hlsli  triangle.hlsl  utils.hlsli
shaders/atmosphere/: atmosphere.hlsl  preetham_sky_model.hlsli
shaders/interop/: constant_buffers.hlsli  interop_common.hlsli  render_resources.hlsli  structured_buffers.hlsli
shaders/shading/: blinn_phong.hlsl  brdf.hlsli  pbr.hlsl  phong.hlsl
src/: CMakeLists.txt  camera.rs  main.cpp  main.rs  renderer.rs  shader.rs  shaders.hlsl
src/asset/: CMakeLists.txt  mesh_loader.cpp  model_loader.cpp  texture_loader.cpp
src/core/: CMakeLists.txt  application.cpp  file_system.cpp  log.cpp
src/editor/: CMakeLists.txt  editor.cpp
src/graphics/: CMakeLists.txt  command_list.cpp  command_queue.cpp  descriptor_heap.cpp  device.cpp  pipeline.cpp  root_signature.cpp  shader_compiler.cpp  swapchain.cpp
src/main/: CMakeLists.txt  main.cpp
src/renderer/: CMakeLists.txt  renderer.cpp  shader_compiler.cpp
src/renderer/renderpass/: CMakeLists.txt  atmosphere_renderpass.cpp  cube_map_renderpass.cpp  post_processing_renderpass.cpp  shading_renderpass.cpp
src/renderer/rhi/: CMakeLists.txt  command_list.cpp  command_queue.cpp  device.cpp  pipeline.cpp  root_signature.cpp  swapchain.cpp
src/scene/: CMakeLists.txt  camera.cpp  game_object.cpp  lights.cpp  scene.cpp  scene_manager.cpp
src/scripting/: script_manager.cpp
src/utils/: CMakeLists.txt  timer.cpp
src/window/: CMakeLists.txt  window.cpp
