[package]
name = "serenity-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.4"
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.14", features = ["spirv"]}
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
 