[package]
name = "serenity-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Looks like SDL will not work with raw-window-handle version 0.5.0. Hence using version 0.4.3.
[dependencies]
raw-window-handle = "0.4.3"
widestring = "1.0.2"

[dependencies.sdl2]
    version = "0.35.2"
    default-features = true
    features = ["static-link","use-vcpkg", "raw-window-handle"]

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
]